# Efficient-data-structures-and-algorithms

./: README.md
avltree/: avltree.h  test.cpp  timer.txt
avltree_hash_binsearch_comparison/: CMakeLists.txt  generate_data.cpp  run.sh
avltree_hash_binsearch_comparison/avltree_test/: avltree.h  test_avltree.cpp
avltree_hash_binsearch_comparison/binsearch_test/: sort.cpp  sort.h  test_binsearch.cpp
avltree_hash_binsearch_comparison/graph/: graph.py  graph_removing.py
avltree_hash_binsearch_comparison/hash_test/: hash.h  test_hash.cpp
avltrees_comparison/: CMakeLists.txt  run.sh
avltrees_comparison/avltree_mm/: avltree.h  avltree_test.cpp  mm.h
avltrees_comparison/avltree_new_delete/: avl_new_delete.h  avltree_new_delete_test.cpp
avltrees_comparison/graph/: graph.py
geometry/: geometry.cpp  geometry.hpp
hash/: hash.h  hash0.h
list/: list.h  main.cpp
matrix/: matrix.hpp
ring buffer/: ring_buffer.hpp
smart pointers/: smart_pointers.hpp
sort/: sort.cpp  sort.h  test.cpp  test_class.h
string/: string.cpp  string.hpp
